--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-livekit >= 0.18.0
-livekit-agents~=0.11.0
-livekit-plugins-openai~=0.10.5
-python-dotenv~=1.0
+livekit 
+livekit-agents
+livekit-plugins-openai
+python-dotenv
